--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,13 @@ buildscript {
     }
 
     repositories {
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.4.2'
     }
 }
 
@@ -28,11 +27,10 @@ allprojects {
     group = GROUP
 
     repositories {
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
